Added Login and Session

--- a/templates/view.html
+++ b/templates/view.html
@@ -4,7 +4,7 @@
 </HEAD>
 <BODY>
 <H2>Moral Exemplar Dataset</H2>
-Login to be implemented<BR>
+Login as {{ username }}. <A HREF='logout'>Logout</A><BR>
 <A HREF="edit?id=new">Add a New Record</A>
 <TABLE border=1>
 {% for html in list_of_html %}
