--- a/templates/edit.html
+++ b/templates/edit.html
@@ -63,6 +63,8 @@ Ethical Question:<BR>
 	<TD>{{ form_data['amoral_actions'] | safe }}</TD></TR>
 </TABLE>
 <BR>
+<LABEL FOR="validated">Validation Completed</LABEL>
+<INPUT TYPE="checkbox" NAME="validated" checked/>
 <INPUT TYPE="submit" value="Save">
 </FORM><BR>
 <A HREF="view">Back to List of Scenarios</A>
