Update edit interface wordings

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -41,10 +41,10 @@
 Description:<BR>
 <TEXTAREA NAME="description" ROWS="4" COLS="100" STYLE="overflow:auto">
 {{ form_data['description'] }}</TEXTAREA><BR>
-Context:<BR>
+Text:<BR>
 <TEXTAREA NAME="context" ROWS="4" COLS="100" STYLE="overflow:auto">
 {{ form_data['context'] }}</TEXTAREA><BR>
-Ethical Question:<BR>
+Context:<BR>
 <TEXTAREA NAME="ethic_q" ROWS="12" COLS="100" STYLE="overflow:auto">
 {{ form_data['ethic_q'] }}</TEXTAREA><BR>
 <TABLE class="table table-bordered border-primary">
