--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block title %}Moral Exemplar{% endblock %}
+{% block title %}Login to Moral Exemplar{% endblock %}
 {% block content %}
 <div class="topnav">
   <a class="active" href="/">Home</a>
