view session added

--- a/templates/view.html
+++ b/templates/view.html
@@ -6,7 +6,7 @@
     <ul class="navbar-nav">
 {% if editor == 1 %}
       <li class="nav-item">
-        <a class="nav-link active" href="edit?id=new">Add a New Record</a>
+        <a class="nav-link active" href="edit?id=new">Admin Dashboard</a>
       </li>
 {% endif %}
     </ul>
