--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,9 +2,6 @@
 <HEAD>
 <TITLE>{% block title %}{% endblock %}</TITLE>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <STYLE>
 body {font-family: Arial, Helvetica, sans-serif;}
 
@@ -160,6 +157,10 @@ body {
 }
 
 </STYLE>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+{% block js_include %}{% endblock %}
 <SCRIPT>
 function init() {
 	// Stop
