Adjust client-side api url

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,7 +6,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <SCRIPT>
 // console.log("Running!");
-base_url = "https://moralstage.pythonanywhere.com/api/"
+base_url = "/api/"
 /*
 const testData = {
     "x": [1, 2, 3],
